<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_featured_video_black_24dp"
        android:title="@string/title_feed" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_inbox_black_24dp"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favourite" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/title_account" />

</menu>